# Image2Poly

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  utils.py
examples/: delaunay.py  delaunay_main.py  hillclimb.py  hillclimb_main.py  polygons.py
main/: delaunay_main.py  hillclimb_main.py
optimizers/: annealing.py  cma_es.py  genetic.py  individual.py  optimizer.py  pso.py
problems/: delaunay.py  hillclimb.py  individual.py  polygons.py
